// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Closes menu when not hovered 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  shade="dark"
  showOnHover={true}
  title="Österreich"
>
  <div
    className="dropDownContainer down dark "
  >
    <button
      aria-expanded={false}
      aria-haspopup="listbox"
      className="dropDownToggle"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Österreich
    </button>
  </div>
</DropDown>
`;

exports[`Does not open menu when hovered while showOnHover is enabled 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  shade="dark"
  showOnHover={false}
  title="Österreich"
>
  <div
    className="dropDownContainer down dark "
  >
    <button
      aria-expanded={false}
      aria-haspopup="listbox"
      className="dropDownToggle"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Österreich
    </button>
  </div>
</DropDown>
`;

exports[`Renders DropDown without crashing 1`] = `
<div
  className="dropDownContainer down dark "
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="dropDownToggle"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    Products
  </button>
</div>
`;

exports[`Renders correctly when no icon is provided 1`] = `
<div
  className="dropDownContainer down dark "
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="dropDownToggle"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    Österreich
  </button>
</div>
`;

exports[`Renders menu when button is clicked 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  shade="dark"
  showOnHover={false}
  title={
    <span>
      United States
      <span
        aria-label="us"
        role="img"
      >
        🇺🇸
      </span>
    </span>
  }
>
  <div
    className="dropDownContainer down dark "
  >
    <button
      aria-expanded={true}
      aria-haspopup="listbox"
      className="dropDownToggle"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span>
        United States
        <span
          aria-label="us"
          role="img"
        >
          🇺🇸
        </span>
      </span>
    </button>
    <ul
      aria-labelledby="dropdown"
      className="dropDownItemList"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <DropDownItem
        icon={
          <span
            aria-label="at"
            role="img"
          >
            🇦🇹
          </span>
        }
        isActive={false}
      >
        <li
          className="dropDownItem "
        >
          <a
            href="/"
          >
            Österreich
            <span
              className="dropDownIcon"
            >
              <span
                aria-label="at"
                role="img"
              >
                🇦🇹
              </span>
            </span>
          </a>
        </li>
      </DropDownItem>
    </ul>
  </div>
</DropDown>
`;

exports[`Renders menu when hovered 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  shade="dark"
  showOnHover={true}
  title="Österreich"
>
  <div
    className="dropDownContainer down dark "
  >
    <button
      aria-expanded={true}
      aria-haspopup="listbox"
      className="dropDownToggle"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Österreich
    </button>
    <ul
      aria-labelledby="dropdown"
      className="dropDownItemList"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <DropDownItem
        icon={false}
        isActive={false}
      >
        <li
          className="dropDownItem "
        >
          <a
            href="/ch"
          >
            Schweiz
          </a>
        </li>
      </DropDownItem>
    </ul>
  </div>
</DropDown>
`;

exports[`Renders with direction up 1`] = `
<div
  className="dropDownContainer up dark "
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="dropDownToggle"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <span>
      Österreich
      <span
        aria-label="at"
        role="img"
      >
        🇦🇹
      </span>
    </span>
  </button>
</div>
`;

exports[`Renders with light shade 1`] = `
<div
  className="dropDownContainer up light pullRight"
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="dropDownToggle"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <span>
      United States
      <img
        alt="American Flag"
        src="https://assets.kununu.com/images/footer/us.png"
        title="American Flag"
      />
    </span>
  </button>
</div>
`;

exports[`Renders with pullRight and showOnHover false 1`] = `
<div
  className="dropDownContainer down dark pullRight"
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="dropDownToggle"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <span>
      Österreich
      <span
        aria-label="at"
        role="img"
      >
        🇦🇹
      </span>
    </span>
  </button>
</div>
`;

exports[`Unmount triggers lifecycle method 1`] = `null`;
